--- a/business/finance/营销/跨越鸿沟.md
+++ b/business/finance/营销/跨越鸿沟.md
@@ -33,3 +33,9 @@
     商业模式驱动比技术驱动更加平滑，相对技术驱动也较好跨越鸿沟
     利基市场是一个垫脚石，得有，但不能留恋
     惠普前执行副总裁：“永远不要进攻加强防守的山头”
+    技术狂热者的座右铭：真正的技术专家不需要整个产品
+    面对怎样跨越鸿沟：你应该怎么做？
+    1.你必须用一个颠覆性创新产品杀既存竞争对手一个抽手不及
+    2.牢记“做小池塘里的大鱼”原则，瞄准一个细分市场，规模大到有影响力，又小到能够拿得下，而且非常适合你的创新产品
+    3.围绕自己的核心产品开发一个整体产品，为目标客户的问题提供端到端解决方案
+    有些战略联盟是非常成功的，比如SAP、惠普和安达信咨询公司建立的战略关系
