--- a/business/social/读书笔记(心智探奇、影响力、置身事内、失控)/以客户为中心.md
+++ b/business/social/读书笔记(心智探奇、影响力、置身事内、失控)/以客户为中心.md
@@ -26,3 +26,6 @@ so
 3、所有想让员工做到的事情都要自己先想清楚、说明白、教到位
 
 管理者面对变化不应被动应付，而应主动思考以获得解决之道，“思考-分析-决策”是“预”的过程，也是管理者能力提升的过程
+员工爱宾客，酒店爱员工，这不是口号，是实际行动
+
+时光漫步天坛店，两条经营原则：大度经营，服务制胜
