--- a/business/读书笔记/选择卓越.md
+++ b/business/读书笔记/选择卓越.md
@@ -8,4 +8,9 @@
                 他们有着令人难以置信的勃勃雄心，但他们的这种雄心首先是为了事业，为了公司、为了工作，而不是为了自己
 
 企业家精神里面其实有重要的一环就是：被颠覆的焦虑？ 或者说时常有危机感
-苹果斯卡利九个星期的休假有点像万科的王石，哈哈哈？ 能这样归因吗？
+苹果斯卡利九个星期的休假有点像万科的王石，哈哈哈？ 能这样归因吗？ 
+日行20英里征程的两个部分：下限与上限，即可以跃过的下限和不能超越的上限，既要实现雄心，又要自我控制以限制增速
+一个好的日行20英里征程必须保持严格的一致性，仅靠良好的愿望是无法实现的
+
+基因泰克公司：
+阿瑟莱文森：对任何形式的傲慢和自大都非常厌恶。孩子气的活泼、对创新的快乐追求以及严明的纪律。
