docs(读书笔记): 更新选择卓越读书笔记内容
- 添加了关于创新能力在动荡环境中重要性的讨论
- 补充了西南航空案例，说明规模和成本比创新更重要的观点
- 增加了太平洋西南航空关于未校准"炮弹"风险的详细分析
- 添加了关于坏程序可能带来好结果的危险性说明
- 补充了在不确定环境中实证验证比纯粹分析更重要的观点
- 完善了关于找到可行方式并利用日行20英里征程原则的内容

--- a/business/读书笔记/选择卓越.md
+++ b/business/读书笔记/选择卓越.md
@@ -11,6 +11,19 @@
 苹果斯卡利九个星期的休假有点像万科的王石，哈哈哈？ 能这样归因吗？ 
 日行20英里征程的两个部分：下限与上限，即可以跃过的下限和不能超越的上限，既要实现雄心，又要自我控制以限制增速
 一个好的日行20英里征程必须保持严格的一致性，仅靠良好的愿望是无法实现的
+在动荡的环境中，创新能力的重要性似乎就要大打折扣
 
 基因泰克公司：
 阿瑟莱文森：对任何形式的傲慢和自大都非常厌恶。孩子气的活泼、对创新的快乐追求以及严明的纪律。
+
+西南航空：
+航空公司代表是一个特殊的案例，在这个行业，规模和成本远比创新重要
+
+太平洋西南航空：
+在充满不确定的、动荡不安的世界里，发射未校准“炮弹”是非常危险的。如果一家公司发发射的未校准“炮弹”没有击中目标，而这时它恰好遭遇了一系列事件的冲击，那么最终的结果可能是灾难性的。
+颇具讽刺意味的是，如果所发射的未校准“炮弹”击中目标，带来庞大的意外之财，那么它所产生的危险可能比“炮弹”未击中目标还要大。要记住，从坏程序获得好的结果是非常危险的。
+好程序并不一定带来好的结果，而坏的程序也不一定带来坏的结果，而源于坏程序的好的结果 ———— 发射未校准“炮弹”却意外取得了成功 ———— 只会进一步强化这种坏程序，并将会导致更多未校准“炮弹”的发射
+
+
+在不稳定的、不确定和快速变化的环境中，依靠纯粹的分析可能不会取得成效，而且还有可能会被置于死地。分析技能当然重要，但实证验证更重要
+比创造性更为重要的是首先找到可行的方式，要比别人做得更出色，然后充分利用日行20英里征程原则
