feat(notes): 更新选择卓越读书笔记并添加钟晓渡投资观点
- 在选择卓越笔记中补充子弹到炮弹的改进验证策略
- 添加关于稳定世界与不确定世界的领导力差异内容
- 增加10倍速领导者的风险管控原则和三类风险分析
- 新增钟晓渡关于久期预期在估值中核心作用的观点

--- a/business/读书笔记/选择卓越.md
+++ b/business/读书笔记/选择卓越.md
@@ -27,3 +27,12 @@
 
 在不稳定的、不确定和快速变化的环境中，依靠纯粹的分析可能不会取得成效，而且还有可能会被置于死地。分析技能当然重要，但实证验证更重要
 比创造性更为重要的是首先找到可行的方式，要比别人做得更出色，然后充分利用日行20英里征程原则
+子弹，子弹，子弹不断改进，充分验证 => 炮弹
+在一个稳定的、可预测的世界里，对于领导一家公司来说，严明的纪律和基于实证主义的创造性或许已经足够了；但在一个不确定的、不稳定的世界里，还需要一种具建设性的焦虑。？
+
+当一个灾难性事件袭向一个行业或整个经济时，公司会分为三类：领先的公司、落后的公司和倒闭的公司。决定你的公司所处类别的并不是破坏性本身，而是你自己
+10倍速领导者会把注意力放在他们目标上，但同时对于环境的变化也保持着高度警惕；他们追求完美的执行，但也会依据条件的变化而作出调整；
+10倍速案例公司在接近和管理风险时会异常谨慎，并着重关注三个类别的风险：
+1.生死线风险（那些会让企业倒闭或受重创的风险）
+2.非对称风险（负面影响大于正面影响的风险）
+3.不可控风险（无法控制或管理的风险）
